# ci40-weather-station

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  dumpReading.c  log.h
data/: object_definitions.xml
feeds/ci40-weather-station/: Makefile
feeds/ci40-weather-station-extended/: Makefile
feeds/weather-station-gateway/: Makefile
scripts/: awa_bootstrapd  awa_clientd  awa_serverd  awalwm2m  clientObjectsDefineExtended.sh  dhcp  network  weather_station_extended_initd  weather_station_initd
